--- a/appify-backend/package.json
+++ b/appify-backend/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "test": "echo \"Error: no test specified\" && exit 1",
+  "dev": "nodemon server.js",
+  "build": "echo \"No build step required for backend\"",
+     "start": "node server.js"
   },
   "keywords": [],
   "author": "",
